# durham-underreported-birds

./: .gitignore  .gitignore.txt.swp  CLAUDE.md  Makefile  PROMPT.md  README.md  pyproject.toml
bird_targets/: __init__.py  __main__.py  cache.py  ebird_client.py  export.py  fetcher.py  habitat_model.py  scoring.py  server.py  spotfinder.py
data/: species_habitat_rules.json
docs/: PRD_habitat_spotfinder.md  PRD_underreported_birds_durham.md
scripts/: ralph.sh
tests/: test_cli.py  test_ebird_client.py  test_export.py  test_fetcher.py  test_habitat_model.py  test_scoring.py  test_server.py  test_spotfinder.py
tests/fixtures/: adjacent_species.json  durham_species.json  exclusions.json  hotspots.json  osm_trails.json  public_lands.json  regions.json  species_spots.json
