[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bird_targets"
version = "0.1.0"
description = "Under-reported bird species discovery for Durham County, NC"
requires-python = ">=3.9"

[project.scripts]
bird-targets = "bird_targets.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
